Bug 434936 - Discover sometimes doesn't say from which version it is updating
Summary: Discover sometimes doesn't say from which version it is updating
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 5.20.5
Platform: Debian testing Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
: 418854 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-03-25 14:38 UTC by David
Modified: 2025-03-29 14:43 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report:


Attachments
discover_lacking_versions (56.07 KB, image/png)
2021-03-26 18:12 UTC, David
Details
discover_no_version_from (26.24 KB, image/png)
2022-11-25 17:02 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2021-03-25 14:38:53 UTC
SUMMARY
Oftentimes, when I open discover and if offers updates for a few packages only, it will not show me in the GUI from which to which version it is updating them, only the final version to which they will update. I am not sure when exactly does it fail to show the current version or what are the exact steps to reproduce.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-03-25 20:19:39 UTC
1. Can you provide a screenshot?
2. Does it work if you resize the window to be wider?
3. Does it work if you leave the Updates page after all the available updates have been loaded, then then return to it?
Comment 2 David 2021-03-26 18:12:18 UTC
Created attachment 137091 [details]
discover_lacking_versions

Attached a screenshot. The problem does not go away if I resize the window, but it does go away if I go to e.g. "about" and then back to the updates page.
Comment 3 Nate Graham 2021-03-30 15:12:53 UTC
OK thanks. Looks like the old versions sometimes get loaded later but the UI isn't updated immediately. Can confirm that.
Comment 4 Dennis Schridde 2022-07-21 09:25:52 UTC
This might be related to bug #411186 or bug #448521, which also deal with wrong version information being displayed.
Comment 5 Nate Graham 2022-08-25 19:08:09 UTC
This bug is probably caused by the way we determine the update string. It does through a chain of logic to see what information is available and probably for a moment the currently-installed version is not available for some reason, and if the code runs in that moment, it shows you just the available version, and then doesn't update later. See https://invent.kde.org/plasma/discover/-/blob/master/libdiscover/resources/AbstractResource.cpp#L255
Comment 6 Nate Graham 2022-11-24 06:12:48 UTC
I believe this is fixed now in Plasma 5.26 after various fixes. Are you still able to reproduce the issue in Plasma 5.26 or later?
Comment 7 David 2022-11-24 16:18:59 UTC
(In reply to Nate Graham from comment #6)
> I believe this is fixed now in Plasma 5.26 after various fixes. Are you
> still able to reproduce the issue in Plasma 5.26 or later?

Still happening:

Operating System: Debian GNU/Linux
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Kernel Version: 6.0.0-4-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX Vega
Manufacturer: Acer
Product Name: Predator PH517-61
System Version: V1.09
Comment 8 David 2022-11-24 16:19:36 UTC
Although, it now happens only for the entries listed as "Applications".
Comment 9 Nate Graham 2022-11-24 16:35:59 UTC
Can you share a new screenshot of how it looks now?
Comment 10 David 2022-11-25 17:02:58 UTC
Created attachment 154027 [details]
discover_no_version_from

Added a screenshot showing the problem in Discover 5.26.3.
Comment 11 Nate Graham 2022-11-25 17:04:24 UTC
Thanks.
Comment 12 Bug Janitor Service 2025-03-25 19:40:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1067
Comment 13 Ismael Asensio 2025-03-26 08:01:00 UTC
Git commit f9310e059b0482b6c4cdb04d799cd6c52c1c664c by Ismael Asensio.
Committed on 26/03/2025 at 07:51.
Pushed by iasensio into branch 'master'.

PackageKit: Fix connection for update details

Otherwise, the front-end requests for update details are not processed
when they should. Instead, these transactions were attached to requests
for package details.

In practice, this solves two issues:
- more responsive to show the changelog info when expanding an entry
- the package details on the background are updated faster, including
  versions involved, since there are less unnecessary transactions
Related: bug 421293
FIXED-IN: 6.3.4

M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/f9310e059b0482b6c4cdb04d799cd6c52c1c664c
Comment 14 Ismael Asensio 2025-03-26 08:50:51 UTC
Git commit 5d490c18c3c5432ba62e174d07bd3e2164457085 by Ismael Asensio.
Committed on 26/03/2025 at 08:01.
Pushed by iasensio into branch 'Plasma/6.3'.

PackageKit: Fix connection for update details

Otherwise, the front-end requests for update details are not processed
when they should. Instead, these transactions were attached to requests
for package details.

In practice, this solves two issues:
- more responsive to show the changelog info when expanding an entry
- the package details on the background are updated faster, including
  versions involved, since there are less unnecessary transactions
Related: bug 421293
FIXED-IN: 6.3.4


(cherry picked from commit f9310e059b0482b6c4cdb04d799cd6c52c1c664c)

Co-authored-by: Ismael Asensio <isma.af@gmail.com>

M  +1    -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/5d490c18c3c5432ba62e174d07bd3e2164457085
Comment 15 Patrick Silva 2025-03-29 14:43:24 UTC
*** Bug 418854 has been marked as a duplicate of this bug. ***