PackageKit: Fix connection for update details

Otherwise, the front-end requests for update details are not processed
when they should. Instead, these transactions were attached to requests
for package details.

In practice, this solves two issues:
- more responsive to show the changelog info when expanding an entry
- the package details on the background are updated faster, including
  versions involved, since there are less unnecessary transactions

BUG: 434936
BUG: 421293
FIXED-IN: 6.3.4


(cherry picked from commit f9310e059b0482b6c4cdb04d799cd6c52c1c664c)

Co-authored-by: Ismael Asensio <isma.af@gmail.com>